test_pake build

--- a/test/Makefile
+++ b/test/Makefile
@@ -1,5 +1,6 @@
 SRC=test_pake.c
 OBJ=$(SRC:.c=.o)
+
 OUT=test_pake
 INCLUDES=-I. -I../src
 LIBS=-L.. -lpake -lssl
@@ -13,8 +14,8 @@ test: test_pake
 %.o: %.c
 	$(CC) $(INCLUDES) $(CFLAGS) -c $< -o $@
 
-$(OUT): $(OBJ)
-	$(CC) $(LIBS) $(LDFLAGS) -o $@ $(OBJS)
+$(OUT): $(OBJ) ../libpake.a
+	$(CC) $(LIBS) $(LDFLAGS) -o $@ $(OBJ) ../libpake.a
 
 clean:
 	rm -f $(OBJ) $(OUT)
