--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,20 @@
-#*#
-.#*
-*.a
-*.o
-test/test_pake
+*~
 *.so
+*.[oa]
+*.lo
+*.la
+.deps
+.libs
+Makefile
+Makefile.in
+aclocal.m4
+config.guess
+config.log
+config.status
+config.sub
+configure
+config.h
+autom4te.cache
+stamp-h1
+m4
+libtool
